--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -25,6 +25,8 @@ windows-gpu = ["whisper-rs/vulkan"]
 
 [dependencies]
 tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "devtools", "macos-private-api"] }
+tauri-plugin-log = "2"
+log = "0.4"
 tauri-plugin-autostart = "2"
 tauri-plugin-single-instance = "2"
 tauri-plugin-opener = "2"
